# causal-sermons

./: .gitignore  pyproject.toml  requirements.txt  requirements.txt.old
notebooks/: church_run.ipynb  semisynth.ipynb  semisynth_summary_ratio.ipynb  sermon_analysis (1).ipynb  sermon_analysis.ipynb
src/causal_sermons/: ate.py  causal_bert.py
