[tool.poetry]
name = "causal-sermons"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "causal_sermons"}]

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "~1.3.2"
transformers = "~4.35.0"
scipy = "~1.11.3"
torch = "~2.1.0"
pandas = "~2.1.2"
keras = "~2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
